# verlet

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  todo.md  verlet.package.json  yae_project.json
modules/verlet/: CMakeLists.txt  verlet.module.json
modules/verlet/code/private/: main.cpp  matrix.hpp  matrix_test.cpp  measure_time.hpp  position_lookup.hpp
src/klgl/: CMakeLists.txt  klgl.module.json
src/klgl/code/private/: application.cpp  read_file.cpp  type_id_widget.cpp  window.cpp
src/klgl/code/private/events/: event_manager.cpp
src/klgl/code/private/filesystem/: filesystem.cpp
src/klgl/code/private/memory/: .clang-tidy  type_erased_array.cpp
src/klgl/code/private/mesh/: mesh_data.cpp  procedural_mesh_generator.cpp
src/klgl/code/private/name_cache/: name.cpp  name_cache.cpp
src/klgl/code/private/opengl/: gl_api.cpp
src/klgl/code/private/opengl/debug/: gl_debug_messenger.cpp
src/klgl/code/private/os/: os.cpp
src/klgl/code/private/platform/glfw/: glfw_state.hpp
src/klgl/code/private/platform/os/: os.cpp
src/klgl/code/private/reflection/: reflected_value_array.cpp  reflection_utils.cpp
src/klgl/code/private/reflection/memory_management/: .clang-tidy  reflected_value_array.cpp
src/klgl/code/private/shader/: shader.cpp  shader_define.cpp  shader_uniform.cpp
src/klgl/code/private/ui/: type_id_widget.cpp
src/klgl/code/public/klgl/: application.hpp  error_handling.hpp  window.hpp
src/klgl/code/public/klgl/events/: detail.hpp  event_listener.hpp  event_listener_interface.hpp  event_listener_method.hpp  event_manager.hpp  mouse_events.hpp  window_events.hpp
src/klgl/code/public/klgl/filesystem/: filesystem.hpp
src/klgl/code/public/klgl/macro/: warning_suppress.hpp
src/klgl/code/public/klgl/memory/: type_erased_array.hpp  type_erased_array_adapter.hpp
src/klgl/code/public/klgl/mesh/: mesh_data.hpp  procedural_mesh_generator.hpp
src/klgl/code/public/klgl/name_cache/: name.hpp  name_cache.hpp
src/klgl/code/public/klgl/opengl/: gl_api.hpp
src/klgl/code/public/klgl/reflection/: matrix_reflect.hpp  reflected_value_array.hpp  reflection_utils.hpp  register_types.hpp
src/klgl/code/public/klgl/shader/: sampler_uniform.hpp  shader.hpp  shader_define.hpp  shader_uniform.hpp  uniform_handle.hpp
src/klgl/code/public/klgl/template/: class_member_traits.hpp  on_scope_leave.hpp  tuple_type_by_index.hpp  type_to_gl_type.hpp
src/klgl/code/public/klgl/texture/: texture.hpp
src/klgl_tests/: CMakeLists.txt  klgl_tests.module.json
src/klgl_tests/code/private/: array_action.hpp  event_manager_tests.cpp  reflected_value_array_test.cpp  type_erased_array_tests.cpp
src/verlet/: CMakeLists.txt  verlet.module.json
src/verlet/code/private/: common.hpp  float_range.hpp  instance_painter.cpp  instance_painter.hpp  int_range.hpp  main.cpp  math.hpp  matrix.hpp  matrix_test.cpp  mesh_vertex.cpp  mesh_vertex.hpp  object.hpp  object_pool.cpp  object_pool.hpp  position_lookup.hpp  tool.cpp  tool.hpp  verlet_app.cpp  verlet_app.hpp  verlet_objects.hpp  verlet_solver.hpp  wrap_raylib.cpp  wrap_raylib.hpp
src/verlet/code/private/coloring/: object_color_function.hpp
src/verlet/code/private/coloring/spawn_color/: spawn_color_strategy.hpp  spawn_color_strategy_rainbow.cpp
src/verlet/code/private/coloring/tick_color/: tick_color_strategy_velocity.cpp  tick_color_strategy_velocity.hpp
src/verlet/code/private/gui/: app_gui.cpp  imgui_helpers.hpp
src/verlet/code/private/klgl/: application.cpp  application.hpp  common.hpp  type_id_widget.cpp  window.cpp  window.hpp
src/verlet/code/private/klgl/mesh/: mesh_data.cpp  mesh_data.hpp
src/verlet/code/private/klgl/opengl/: gl_api.cpp  gl_api.hpp
src/verlet/code/private/klgl/reflection/: matrix_reflect.hpp
src/verlet/code/private/klgl/shader/: shader_define.cpp  shader_uniform.hpp
src/verlet/code/private/klgl/template/: member_offset.hpp  type_to_gl_type.hpp
src/verlet/code/private/klgl/texture/: texture.cpp  texture.hpp
src/verlet/code/private/physics/: verlet_solver.cpp  verlet_solver.hpp
src/verlet/code/private/physics/collision_solvers/: collision_solver_mt.cpp  collision_solver_mt.hpp  collision_solver_st.cpp
src/verlet/code/private/threading/: batch_thread_pool.cpp  batch_thread_pool.hpp
src/verlet/code/private/tools/: delete_objects_tool.cpp  delete_objects_tool.hpp  spawn_objects_tool.cpp  spawn_objects_tool.hpp
src/verlet/content/shaders/: just_color.shader.json  verlet.shader.json
src/verlet/content/shaders/src/: just_color.frag  just_color.vert
src/verlet_fast/: CMakeLists.txt  verlet_fast.module.json
src/verlet_fast/code/private/: imgui_helpers.hpp  instance_painter.cpp  instance_painter.hpp  main.cpp  object.hpp  object_pool.cpp  object_pool.hpp  ranges.hpp  size_t_suffix.hpp  tagged_id_hash.hpp  tool.cpp  tool.hpp  verlet_app.cpp  verlet_app.hpp  verlet_solver.cpp  verlet_solver.hpp
src/verlet_fast/code/private/coloring/spawn_color/: spawn_color_strategy.hpp  spawn_color_strategy_rainbow.cpp
src/verlet_fast/code/private/coloring/tick_color/: tick_color_strategy.hpp  tick_color_strategy_velocity.cpp
src/verlet_fast/code/private/gui/: app_gui.cpp  app_gui.hpp
src/verlet_fast/code/private/physics/: verlet_solver.cpp  verlet_solver.hpp
src/verlet_fast/code/private/physics/collision_solvers/: collision_solver.hpp  collision_solver_mt.cpp  collision_solver_mt.hpp  collision_solver_st.hpp
src/verlet_fast/code/private/tools/: delete_objects_tool.cpp  delete_objects_tool.hpp  move_objects_tool.cpp  move_objects_tool.hpp  spawn_objects_tool.cpp  spawn_objects_tool.hpp  tool.hpp
src/verlet_fast/content/shaders/src/: just_color.frag
src/verlet_lib/: CMakeLists.txt  verlet_lib.module.json
src/verlet_lib/code/public/verlet/: camera.cpp  camera.hpp  instance_painter.cpp  instance_painter.hpp  object.hpp  object_pool.hpp  ranges.hpp  verlet_app.cpp  verlet_app.hpp
src/verlet_lib/code/public/verlet/emitters/: emitter.cpp  (+5 more)
src/verlet_video/: CMakeLists.txt  add_opencv.cmake  verlet_video.module.json
src/verlet_video/code/private/: main.cpp
(+27 files in other folders)
